Fix layout issues in firefox. Change to horizontal scroll.

--- a/src/app/obf-button/obf-button.component.css
+++ b/src/app/obf-button/obf-button.component.css
@@ -10,6 +10,7 @@
 .buttonImageDiv {
   width: 100%;
   height: 100%;
+  min-height: 0;
   display: flex;
 }
 
