--- a/src/app/speechbar/speechbar.component.css
+++ b/src/app/speechbar/speechbar.component.css
@@ -5,8 +5,8 @@
 
 .speechbar {
   display: flex;
-  flex-wrap: wrap;
-  overflow-y: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
   flex-grow: 1;
   padding: 0;
 }
@@ -16,9 +16,9 @@
 }
 
 .speechbarButtonItem {
-  flex: 1 1 10%;
   min-height: 33%;
   max-width: 20%;
+  min-width: 10%;
 }
 
 .speechbarText {
